--- a/src/app/pages/dashboard/shared/certification.styles.scss
+++ b/src/app/pages/dashboard/shared/certification.styles.scss
@@ -66,3 +66,12 @@
     background: var(--color-hover);
   }
 }
+
+.cert-doc-info {
+  padding: 20px
+}
+
+.cert-doc-pdf-preview {
+  width: 400px;
+  height: 500px;
+}
