--- a/src/app/pages/dashboard/certifications/certifications.component.html
+++ b/src/app/pages/dashboard/certifications/certifications.component.html
@@ -20,10 +20,10 @@
           <div class="certification-info-text-fields">
             <h2 class="certification-info-title">{{ cert.certName }}</h2>
             <p>{{ cert.certDescription }}</p>
-            <p class="certification-date">{{ t('certs.certObtainingDate', { certObtainingDate: dayjs(cert.obtainingDate).format('YYYY/MM/DD HH:mm:ss') }) }}</p>
-            <p class="certification-date">{{ t('certs.certExpirationDate', { certExpirationDate: dayjs(cert.expirationDate).format('YYYY/MM/DD HH:mm:ss') }) }}</p>
-            <p class="certification-date">{{ t('certs.certCreatedAt', { certCreatedAt: dayjs(cert.createdAt).format('YYYY/MM/DD HH:mm:ss') }) }}</p>
-            <p class="certification-date">{{ t('certs.certUpdatedAt', { certUpdatedAt: dayjs(cert.updatedAt).format('YYYY/MM/DD HH:mm:ss') }) }}</p>
+            <p class="cert-date">{{ t('certs.certObtainingDate', { certObtainingDate: dayjs(cert.obtainingDate).format('YYYY/MM/DD HH:mm:ss') }) }}</p>
+            <p class="cert-date">{{ t('certs.certExpirationDate', { certExpirationDate: dayjs(cert.expirationDate).format('YYYY/MM/DD HH:mm:ss') }) }}</p>
+            <p class="cert-date">{{ t('certs.certCreatedAt', { certCreatedAt: dayjs(cert.createdAt).format('YYYY/MM/DD HH:mm:ss') }) }}</p>
+            <p class="cert-date">{{ t('certs.certUpdatedAt', { certUpdatedAt: dayjs(cert.updatedAt).format('YYYY/MM/DD HH:mm:ss') }) }}</p>
           </div>
           <div>
             <img
