create certification page

--- a/src/app/pages/dashboard/create-author/create-author.component.html
+++ b/src/app/pages/dashboard/create-author/create-author.component.html
@@ -39,8 +39,8 @@
           *ngIf="profilePicture"
           [src]="profilePicture"
           (click)="clearProfilePicture()"
-          class="article-main-picture"
-          alt="article-picture"
+          class="author-main-picture"
+          alt="author-picture"
         />
       </div>
 
