--- a/src/app/pages/dashboard/authors/authors.component.html
+++ b/src/app/pages/dashboard/authors/authors.component.html
@@ -66,7 +66,7 @@
           [itemsPerPage]="pageSize"
           [totalItems]="totalItems"
           (setCurrentPage)="setCurrentPage($event)"
-          (setItemsPerPage)="setArticlesPerPage($event)"
+          (setItemsPerPage)="setAuthorsPerPage($event)"
           (fetchItems)="listAuthors()"
         />
       </div>
