experiences list page

--- a/src/app/pages/dashboard/certifications/certifications.component.html
+++ b/src/app/pages/dashboard/certifications/certifications.component.html
@@ -29,7 +29,7 @@
             <img
               class="cert-picture-preview"
               [src]="staticStorage + cert.certPicture"
-              alt=""
+              alt="cert-pic"
             >
           </div>
         </div>
