warnings minor changes

--- a/src/app/pages/dashboard/author/author.component.html
+++ b/src/app/pages/dashboard/author/author.component.html
@@ -22,7 +22,7 @@
           <basic-button
             [label]="t('button.deleteAuthor')"
             [danger]="true"
-            (buttonClick)="deleteAuthor(author.id)"
+            (buttonClick)="deleteAuthor()"
           />
         </div>
       </div>
