--- a/src/app/pages/dashboard/certification/certification.component.html
+++ b/src/app/pages/dashboard/certification/certification.component.html
@@ -22,7 +22,7 @@
           <basic-button
             [label]="t('button.deleteCert')"
             [danger]="true"
-            (buttonClick)="deleteCertification(certification.id)"
+            (buttonClick)="deleteCertification()"
           />
         </div>
       </div>
