--- a/src/app/pages/dashboard/create-author/create-author.component.scss
+++ b/src/app/pages/dashboard/create-author/create-author.component.scss
@@ -9,3 +9,20 @@
   cursor: pointer;
   object-fit: cover;
 }
+
+.social-box {
+  display: flex;
+}
+
+.social-box-item {
+  width: 100%;
+
+  &.margin {
+    margin: 0 10px;
+  }
+
+  &.buttons {
+    display: flex;
+    align-items: center;
+  }
+}
