--- a/src/app/pages/dashboard/shared/author.styles.scss
+++ b/src/app/pages/dashboard/shared/author.styles.scss
@@ -15,3 +15,21 @@
   display: flex;
   justify-content: center;
 }
+
+
+.social-box {
+  display: flex;
+}
+
+.social-box-item {
+  width: 100%;
+
+  &.margin {
+    margin: 0 10px;
+  }
+
+  &.buttons {
+    display: flex;
+    align-items: center;
+  }
+}
