editing author socials

--- a/src/app/pages/credentials/registration/registration.component.html
+++ b/src/app/pages/credentials/registration/registration.component.html
@@ -41,7 +41,7 @@
         <div class="link-wrapper">
           <basic-link
             [label]="t('link.alreadyHaveAccount')"
-            href="/login"
+            [href]="'/login'"
           />
         </div>
         <div class="button-wrapper">
