--- a/src/app/components/pages-components/preview-about/preview-about.component.html
+++ b/src/app/components/pages-components/preview-about/preview-about.component.html
@@ -1,44 +1,46 @@
-<div class="preview-wrapper">
-  <div class="hero-section">
-    <div class="hero-content-wrapper">
-      <div class="left-hero-section">
-        <h1 class="heading-xxl">About me and this project.</h1>
+<div class="preview-body">
+  <div class="preview-wrapper">
+    <div class="hero-section">
+      <div class="hero-content-wrapper">
+        <div class="left-hero-section">
+          <h1 class="heading-xxl">About me and this project.</h1>
+        </div>
       </div>
     </div>
-  </div>
 
-  <div class="story-section">
-    <div class="story-wrapper">
-      <div class="left-story">
-        <p class="intro-paragraph">First of all, I'd would like to say thank for you. You are reading this page and you are reading this blog, so I believe that you were able to find something interesting here.</p><br>
-        <p class="intro-paragraph">My name is Mikhail and this is my blog about cybersecurity and IT. I am really obsessed with what I am doing and I want to share my knowledge with people.</p><br>
-        <p class="intro-paragraph">The idea behind creating with blog was also quite interesting. I think that the best way to learn something is to start teach other people. Also, for me this blog is the opportunity to just write some code (which I also still like, despite the fact that I am not work as a developer anymore).</p><br>
-        <p class="intro-paragraph">If you find anything that I am writing about interesting, you would like to talk or you have any other reasons why you want to talk to me, I will always be glad to do so. </p><br>
-        <a class="span-link">So, let's stay it touch!</a>
-      </div>
-
-      <div class="about-container">
-        <div class="about-team-member-cell">
-          <!--        <component-about-team-cell-->
-          <!--          *ngFor="let teamMember of aboutTeam"-->
-          <!--          [title]="teamMember.title"-->
-          <!--          [subtitle]="teamMember.subtitle"-->
-          <!--          [description]="teamMember.description"-->
-          <!--          [image]="teamMember.image"-->
-          <!--          [socialLinks]="teamMember.socialLinks"-->
-          <!--        />-->
+    <div class="story-section">
+      <div class="story-wrapper">
+        <div class="left-story">
+          <p class="paragraph intro-paragraph">First of all, I'd would like to say thank for you. You are reading this page and you are reading this blog, so I believe that you were able to find something interesting here.</p><br>
+          <p class="paragraph intro-paragraph">My name is Mikhail and this is my blog about cybersecurity and IT. I am really obsessed with what I am doing and I want to share my knowledge with people.</p><br>
+          <p class="paragraph intro-paragraph">The idea behind creating with blog was also quite interesting. I think that the best way to learn something is to start teach other people. Also, for me this blog is the opportunity to just write some code (which I also still like, despite the fact that I am not work as a developer anymore).</p><br>
+          <p class="paragraph intro-paragraph">If you find anything that I am writing about interesting, you would like to talk or you have any other reasons why you want to talk to me, I will always be glad to do so. </p><br>
+          <a class="span-link">So, let's stay it touch!</a>
         </div>
 
-        <div class="about-team-member-cell">
-          <!--        <component-about-experience-cell-->
-          <!--          [experiences]="aboutExperience"-->
-          <!--        />-->
-        </div>
+        <div class="about-container">
+          <div class="about-author-cell" *ngIf="selectedAuthor">
+            <component-about-author-cell
+              [title]="selectedAuthor.title"
+              [firstName]="selectedAuthor.firstName"
+              [lastName]="selectedAuthor.lastName"
+              [description]="selectedAuthor.description"
+              [image]="selectedAuthor.profilePicture"
+              [socialLinks]="selectedAuthor.socials"
+            />
+          </div>
 
-        <div class="about-team-member-cell full-width">
-          <!--        <component-about-certs-cell-->
-          <!--          [certs]="aboutCerts"-->
-          <!--        />-->
+          <div class="about-author-cell">
+            <!--        <component-about-experience-cell-->
+            <!--          [experiences]="aboutExperience"-->
+            <!--        />-->
+          </div>
+
+          <div class="about-author-cell full-width">
+            <!--        <component-about-certs-cell-->
+            <!--          [certs]="aboutCerts"-->
+            <!--        />-->
+          </div>
         </div>
       </div>
     </div>
