--- a/src/app/pages/dashboard/author/author.component.html
+++ b/src/app/pages/dashboard/author/author.component.html
@@ -156,6 +156,7 @@
             *ngIf="!authorNewImage"
             [src]="staticStorage + authorImage"
             alt="author-picture"
+            class="author-pic-wrapper"
           />
           <img
             *ngIf="authorNewImage"
