--- a/src/app/components/pages-components/preview-article/preview-article.component.html
+++ b/src/app/components/pages-components/preview-article/preview-article.component.html
@@ -1,5 +1,5 @@
 <div class="preview-wrapper">
-  <div class="hero-section">
+  <div class="preview-hero-section">
     <div class="blog-post-header-wrapper">
       <div class="category-holder">
         <a class="blog-category-link">{{ articleCategory }}</a>
@@ -18,13 +18,13 @@
       <img
         *ngIf="!articlePicture"
         [src]="staticStorage + articleImage"
-        class="image-cover"
+        class="preview-image-cover"
         alt="article-picture"
       />
       <img
         *ngIf="articlePicture"
         [src]="articlePicture"
-        class="image-cover"
+        class="preview-image-cover"
         alt="article-picture"
       />
     </div>
