--- a/src/app/components/pages-components/shared/preview.styles.scss
+++ b/src/app/components/pages-components/shared/preview.styles.scss
@@ -1,19 +1,6 @@
 @import 'variables';
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
 
-// @TODO Refactor styles and make it preview only
-
-.preview-body {
-  background-color: var(--background);
-  color: #333;
-  font-size: .75vw;
-  line-height: 20px;
-  padding: 0;
-  margin: 0;
-}
-
-
-h1 {
+.preview-h1 {
   font-family: Montserrat, sans-serif;
   color: #fff;
   margin-top: 20px;
@@ -23,7 +10,7 @@ h1 {
   line-height: 1.5;
 }
 
-h2 {
+.preview-h2 {
   color: #fff;
   margin-top: 20px;
   margin-bottom: 10px;
@@ -33,7 +20,7 @@ h2 {
   line-height: 1.5;
 }
 
-h3 {
+.preview-h3 {
   color: #fff;
   margin-top: 20px;
   margin-bottom: 10px;
@@ -43,7 +30,7 @@ h3 {
   line-height: 1.5;
 }
 
-h4 {
+.preview-h4 {
   color: #fff;
   margin-top: 10px;
   margin-bottom: 10px;
@@ -53,7 +40,7 @@ h4 {
   line-height: 1.5;
 }
 
-h5 {
+.preview-h5 {
   color: #fff;
   margin-top: 10px;
   margin-bottom: 10px;
@@ -63,7 +50,7 @@ h5 {
   line-height: 1.5;
 }
 
-h6 {
+.preview-h6 {
   color: #fff;
   margin-top: 10px;
   margin-bottom: 10px;
@@ -73,7 +60,7 @@ h6 {
   line-height: 1.5;
 }
 
-.paragraph {
+.preview-paragraph {
   font-family: var(--secondary-font), sans-serif;
   color: #cacaca;
   margin-bottom: 10px;
@@ -81,7 +68,7 @@ h6 {
   line-height: 1.5;
 }
 
-a {
+.preview-a {
   border-bottom: 1px solid var(--lines);
   color: #fff;
   font-family: Roboto Mono, sans-serif;
@@ -95,7 +82,7 @@ a {
   }
 }
 
-ul {
+.preview-ul {
   color: #fff;
   margin-top: 0;
   margin-bottom: 10px;
@@ -104,7 +91,7 @@ ul {
   font-size: 1em;
 }
 
-ol {
+.preview-ol {
   color: #fff;
   margin-top: 0;
   margin-bottom: 10px;
@@ -114,13 +101,13 @@ ol {
   line-height: 1.5;
 }
 
-li {
+.preview-li {
   color: #fff;
   font-family: Roboto Mono, sans-serif;
   font-size: 1rem;
 }
 
-blockquote {
+.preview-blockquote {
   color: #fff;
   border-left: 5px solid #e2e2e2;
   margin-bottom: 10px;
@@ -130,37 +117,12 @@ blockquote {
   line-height: 1.5;
 }
 
-.heading-xxl {
-  text-align: left;
-  width: 75%;
-  margin-top: 0;
-  margin-bottom: 0;
-  font-family: Montserrat, sans-serif;
-  font-size: 3rem;
-  font-weight: 400;
-  line-height: 1;
-
-  @media screen and (max-width: 479px) {
-    width: 100%;
-  }
-
-  &.not-found-page,
-  &.newsletters-page {
-    text-align: center;
-    font-size: 12em;
-    font-weight: 600;
-
-    @media screen and (max-width: 991px) {
-      width: 100%;
-    }
-
-    @media screen and (max-width: 767px) {
-      font-size: 8em;
-    }
-  }
+.preview-span-link {
+  font-size: var(--standard-subheading);
+  cursor: pointer;
 }
 
-.hero-section {
+.preview-hero-section {
   display: flex;
   overflow: hidden;
   height: 35vh;
@@ -178,229 +140,28 @@ blockquote {
   }
 }
 
-.hero-content-wrapper {
-  align-items: flex-start;
-  width: 100%;
-  display: flex;
-
-  @media screen and (max-width: 991px) {
-    flex-direction: column;
-  }
-}
-
-.left-hero-section {
-  justify-content: flex-start;
-  align-items: flex-start;
-  width: 50vw;
-  display: flex;
-
-  @media screen and (max-width: 991px) {
-    width: 100%;
-  }
-}
-
-.right-hero-section {
-  flex-direction: column;
-  align-items: flex-start;
-  width: 50vw;
-  display: flex;
-
-  @media screen and (max-width: 991px) {
-    width: 100%;
-  }
-}
-
-.bold-text-6 {
+.preview-bold-text-6 {
   font-family: Roboto Mono, sans-serif;
   font-weight: 300;
   line-height: 20px;
 }
 
-.italic-text-2 {
+.preview-italic-text-2 {
   font-size: var(--standard-heading);
-}
-
-.divider {
-  background-color: rgba(255, 255, 255, .07);
-  height: .5px;
-  margin-top: 2.5vw;
-  margin-bottom: 2.5vw;
-}
-
-.intro-wrapper {
-  width: 100%;
-
-  @media screen and (max-width: 991px) {
-    text-align: right;
-    justify-content: flex-end;
-    margin-top: 3em;
-    display: flex;
-  }
-
-  @media screen and (max-width: 767px) {
-    margin-top: 5vw;
-  }
-
-  @media screen and (max-width: 479px) {
-    margin-top: 5vw;
-  }
-}
-
-.w-button {
-  display: inline-block;
-  padding: 9px 15px;
-  background-color: #3898EC;
-  color: white;
-  border: 0;
-  line-height: inherit;
-  text-decoration: none;
-  cursor: pointer;
-  border-radius: 0;
-}
-
-.heading-style-wrapper {
-  grid-column-gap: 16px;
-  grid-row-gap: 59px;
-  grid-template-rows: auto;
-  grid-template-columns: 1fr;
-  grid-auto-columns: 1fr;
-  justify-content: center;
-  justify-items: center;
-  padding: 5vh 5vw;
-  display: grid;
-
-  @media screen and (max-width: 767px) {
-    grid-template-columns: 1fr;
-  }
-
-  @media screen and (max-width: 479px) {
-    grid-template-rows: auto auto auto auto;
-    grid-template-columns: 1fr;
-  }
-
-  &.style-guide-page {
-    border-top: 1px solid var(--dividers);
-    color: #fff;
-    flex-direction: column;
-    grid-template-columns: 1fr 1fr;
-    align-items: center;
-    justify-items: start;
-    display: flex;
-
-    @media screen and (max-width: 767px) {
-      grid-template-columns: 1fr;
-    }
-  }
-}
-
-.image-cover {
-  object-fit: cover;
-  width: 100%;
-  height: 30vh;
-  margin-bottom: 18px;
-}
-
-.span-link {
-  font-size: var(--standard-subheading);
-  cursor: pointer;
 }
 
 .preview-wrapper {
   background-color: #1a1a1a;
 }
 
-.story-section {
-  height: auto;
-  padding: 0;
-  overflow: hidden;
-}
-
-.story-wrapper {
-  display: flex;
-  padding-top: 0;
-  border-top-style: solid;
-  border-top-width: 1px;
-  border-bottom-style: solid;
-  border-bottom-width: 1px;
-
-  @media screen and (max-width: 991px) {
-    flex-direction: column;
-  }
-}
-
-.left-story {
-  width: 30vw;
-  padding-top: 2.5vw;
-  padding-right: 2.5vw;
-  padding-left: 5vw;
-  border-right: 1px solid rgba(255, 255, 255, .07);
-
-  @media screen and (max-width: 991px) {
-    align-items: flex-end;
-    flex-direction: column;
-    width: 90vw;
-    padding-bottom: 2.5vw;
-    padding-right: 5vw;
-    display: flex;
-  }
-}
-
-.about-container {
-  display: grid;
-  width: 70vw;
-  height: 100%;
-  padding-top: 2.5vw;
-  padding-right: 5vw;
-  padding-bottom: 2.5vw;
-  justify-content: center;
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap: 2.5vw;
-
-  @media screen and (max-width: 991px) {
-    width: 100vw;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 1vw;
-  }
-
-  @media screen and (max-width: 767px) {
-    grid-template-columns: 1fr;
-    grid-gap: 0;
-    padding-right: 0;
-  }
-
-  @media screen and (max-width: 479px) {
-    grid-template-columns: 1fr;
-  }
-}
-
-.about-author-cell {
-  border: 1px solid rgba(255, 255, 255, .07);
-  flex-direction: column;
-  margin: 0 0 0 2.5vw;
-  display: flex;
+.preview-image-cover {
+  object-fit: cover;
   width: 100%;
-
-  @media screen and (max-width: 991px) {
-    width: 100%;
-    margin: 0 !important;
-  }
-
-  @media screen and (max-width: 767px) {
-    width: 100%;
-    margin: 0 !important;
-  }
-
-  @media screen and (max-width: 479px) {
-    width: 100%;
-    margin: 0 !important;
-  }
+  height: 30vh;
+  margin-bottom: 18px;
 }
 
-.full-width {
-  grid-column: span 2;
-}
-
-.intro-paragraph {
+.preview-intro-paragraph {
   font-size: var(--standard-subheading);
   margin: 0;
   padding-left: 0;
@@ -431,13 +192,7 @@ blockquote {
   }
 }
 
-.span-link {
-  font-size: .75rem;
-  cursor: pointer;
-  color: white;
-}
-
-.about-block-info {
+.preview-about-block-info {
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
@@ -445,12 +200,12 @@ blockquote {
   display: flex;
 }
 
-.eyebrow {
+.preview-eyebrow {
   margin-bottom: 0;
   font-size: 1rem;
 }
 
-.about-cell-name-two {
+.preview-about-cell-name-two {
   color: #fff;
   margin-top: 5px;
   margin-bottom: 5px;
@@ -458,11 +213,11 @@ blockquote {
   font-weight: 700;
 }
 
-.about-cell-desc {
+.preview-about-cell-desc {
   margin-bottom: 1.5em;
 }
 
-.about-cell-social-link-cell {
+.preview-about-cell-social-link-cell {
   text-align: right;
   width: 100%;
 }
